Fix: Use absolute path to k3s executable
This prevents any issues with /usr/local/bin not being in the root users
path in certain cases.

--- a/roles/kubernetes/k3s-cluster/tasks/main.yml
+++ b/roles/kubernetes/k3s-cluster/tasks/main.yml
@@ -9,7 +9,7 @@
     - services.yml
 
 - name: Wait until worker is registered with master
-  command: k3s kubectl get nodes -o name
+  command: /usr/local/bin/k3s kubectl get nodes -o name
   register: res
   until: ansible_hostname in res.stdout
   retries: 60
