K3s: Add SELinux support

--- a/roles/kubernetes/k3s-cluster/tasks/main.yml
+++ b/roles/kubernetes/k3s-cluster/tasks/main.yml
@@ -1,9 +1,12 @@
 ---
-- name: Include tasks
+- name: "SELinux : Include tasks"
+  include_tasks: selinux.yml
+  when: k3s_enable_selinux and ansible_os_family == "RedHat"
+
+- name: Include common tasks
   include_tasks: "{{ item }}"
   loop:
     - prerequisites.yml
-    - packages.yml
     - token.yml
     - open-iscsi.yml
     - services.yml
