--- a/roles/kubernetes/k3s-cluster/tasks/prerequisites.yml
+++ b/roles/kubernetes/k3s-cluster/tasks/prerequisites.yml
@@ -6,12 +6,11 @@
     dest: /usr/local/bin/k3s
     owner: root
     group: root
+    seuser: system_u
+    serole: object_r
+    setype: container_runtime_exec_t
+    selevel: s0
     mode: 0755
-
-- name: Set SELinux to disabled state
-  selinux:
-    state: disabled
-  when: ansible_distribution in ['CentOS', 'Red Hat Enterprise Linux']
 
 - name: Enable IPv4 forwarding
   sysctl:
@@ -33,13 +32,13 @@
     content: "br_netfilter"
     dest: /etc/modules-load.d/br_netfilter.conf
     mode: "u=rw,g=,o="
-  when: ansible_distribution in ['CentOS', 'Red Hat Enterprise Linux']
+  when: ansible_os_family == "RedHat"
 
 - name: Load br_netfilter
   modprobe:
     name: br_netfilter
     state: present
-  when: ansible_distribution in ['CentOS', 'Red Hat Enterprise Linux']
+  when: ansible_os_family == "RedHat"
 
 - name: Set bridge-nf-call-iptables (just to be sure)
   sysctl:
@@ -47,22 +46,12 @@
     value: "1"
     state: present
     reload: yes
-  when: ansible_distribution in ['CentOS', 'Red Hat Enterprise Linux']
   loop:
     - net.bridge.bridge-nf-call-iptables
     - net.bridge.bridge-nf-call-ip6tables
   loop_control:
     loop_var: bridge_nf_call_loop
-
-- name: Add /usr/local/bin to sudo secure_path
-  lineinfile:
-    line: 'Defaults    secure_path = /sbin:/bin:/usr/sbin:/usr/bin:/usr/local/bin'
-    regexp: "Defaults(\\s)*secure_path(\\s)*="
-    state: present
-    insertafter: EOF
-    path: /etc/sudoers
-    validate: 'visudo -cf %s'
-  when: ansible_distribution in ['CentOS', 'Red Hat Enterprise Linux']
+  when: ansible_os_family == "RedHat"
 
 - name: Ensure required directories exist
   file:
