--- a/roles/kubernetes/k3s-cluster/tasks/services.yml
+++ b/roles/kubernetes/k3s-cluster/tasks/services.yml
@@ -1,16 +1,28 @@
 ---
-- name: Copy K3s service file
+- name: Assert the K3s configuration file
   template:
-    src: "{{ config_file.src }}"
-    dest: "{{ config_file.dest }}"
+    src: config.yaml.j2
+    dest: /etc/rancher/k3s/config.yaml
     owner: root
     group: root
     mode: 0644
-  loop:
-    - { src: config.yaml.j2, dest: "{{ k3s_config_file }}" }
-    - { src: k3s.service.j2, dest: "{{ k3s_service_file }}" }
-  loop_control:
-    loop_var: config_file
+    seuser: system_u
+    serole: object_r
+    setype: etc_t
+    selevel: s0
+  notify: config_changed
+
+- name: Assert the K3s service file
+  template:
+    src: k3s.service.j2
+    dest: "{{ k3s_service_file }}"
+    owner: root
+    group: root
+    mode: 0644
+    seuser: system_u
+    serole: object_r
+    setype: systemd_unit_file_t
+    selevel: s0
   notify: config_changed
 
 - name: Flush handlers
