--- a/cluster/system/cert-manager/Chart.yaml
+++ b/cluster/system/cert-manager/Chart.yaml
@@ -6,3 +6,6 @@ dependencies:
   - name: cert-manager
     version: 1.8.2
     repository: https://charts.jetstack.io
+  - name: cert-manager-trust
+    version: 0.1.1
+    repository: https://charts.jetstack.io
