--- a/roles/389ds-bootstrap/tasks/groups/administrators.yml
+++ b/roles/389ds-bootstrap/tasks/groups/administrators.yml
@@ -1,9 +1,9 @@
 ---
 - name: Create 'administrators' group
   ldap_entry:
-    bind_dn: cn=manager
-    bind_pw: "{{ dirsrv_root_pw }}"
-    server_uri: "{% if dirsrv_cert_db.stat.exists %}ldaps://{% else %}ldap://{% endif %}"
+    bind_dn: cn=Directory Manager
+    bind_pw: password
+    server_uri: ldaps://ldap.homelab.internal
     validate_certs: no
     dn: "cn=administrators,ou=groups,{{ dirsrv_domain }}"
     objectClass:
@@ -16,9 +16,9 @@
 
 - name: Assert 'administrators' group members
   ldap_attrs:
-    bind_dn: cn=manager
-    bind_pw: "{{ dirsrv_root_pw }}"
-    server_uri: "{% if dirsrv_cert_db.stat.exists %}ldaps://{% else %}ldap://{% endif %}"
+    bind_dn: cn=Directory Manager
+    bind_pw: password
+    server_uri: ldaps://ldap.homelab.internal
     validate_certs: no
     dn: "cn=administrators,ou=groups,{{ dirsrv_domain }}"
     attributes:
