--- a/roles/389ds-bootstrap/tasks/plugins/attribute-uniqueness.yml
+++ b/roles/389ds-bootstrap/tasks/plugins/attribute-uniqueness.yml
@@ -1,9 +1,9 @@
 ---
 - name: Create Attribute Uniqueness entries
   ldap_entry:
-    bind_dn: cn=manager
-    bind_pw: "{{ dirsrv_root_pw }}"
-    server_uri: "{% if dirsrv_cert_db.stat.exists %}ldaps://{% else %}ldap://{% endif %}"
+    bind_dn: cn=Directory Manager
+    bind_pw: password
+    server_uri: ldaps://ldap.homelab.internal
     validate_certs: no
     dn: "cn={{ attr_uniq }} Attribute Uniqueness,cn=plugins,cn=config"
     objectClass:
@@ -35,9 +35,9 @@
 
 - name: Assert Attribute Uniqueness configuration
   ldap_attrs:
-    bind_dn: cn=manager
-    bind_pw: "{{ dirsrv_root_pw }}"
-    server_uri: "{% if dirsrv_cert_db.stat.exists %}ldaps://{% else %}ldap://{% endif %}"
+    bind_dn: cn=Directory Manager
+    bind_pw: password
+    server_uri: ldaps://ldap.homelab.internal
     validate_certs: no
     dn: "cn={{ attr_uniq }} Attribute Uniqueness,cn=plugins,cn=config"
     attributes:
