Fix(389ds-bootstrap): restart tasks
Fix the 389ds-bootstrap restart tasks to work with Kubernetes.

--- a/roles/389ds-bootstrap/handlers/restart-dirsrv.yml
+++ b/roles/389ds-bootstrap/handlers/restart-dirsrv.yml
@@ -1,6 +1,6 @@
 ---
 - name: Restart the directory server
-  command: kubectl -n 389server rollout restart deployment 389server
+  command: kubectl -n 389ds rollout restart deployment 389ds
 
 - name: Wait for directory server to be ready
-  command: kubectl -n 389server rollout status deployment 389server
+  command: kubectl -n 389ds rollout status deployment 389ds
