--- a/21-configure-services.yml
+++ b/21-configure-services.yml
@@ -4,5 +4,5 @@
   vars_files:
     - vars/global.yml
   roles:
-    # TODO: Get cluster CA certificate here
+    - kubernetes/ca-trust
     - 389ds-bootstrap
