Fix: Specify storageClass for 389ds

--- a/cluster/platform/389ds/templates/storage.yaml
+++ b/cluster/platform/389ds/templates/storage.yaml
@@ -5,6 +5,7 @@ metadata:
   name: 389ds-data
   namespace: 389ds
 spec:
+  storageClassName: longhorn
   accessModes:
     - ReadWriteOnce
   resources:
