Add kube-vip to k3s control-plane node template
Add kube-vip to allow for dynamically assigned node IP addresses, and to
prepare for HA control-plane.

--- a/templates/provisioning/roles/kubernetes/k3s-cluster/handlers/config-changed.yml
+++ b/templates/provisioning/roles/kubernetes/k3s-cluster/handlers/config-changed.yml
@@ -21,10 +21,10 @@
     mode: 0600
     flat: yes
 
-- name: Ensure FQDN is set correctly for kubeconfig
+- name: Ensure IP address is set correctly for kubeconfig
   replace:
     path: ~/.kube/config
     regexp: '127.0.0.1'
-    replace: "k3s-master.{{ net.domain }}"
+    replace: "{{ k3s_kubevip_address }}"
   delegate_to: localhost
   become: no
