--- a/templates/provisioning/roles/kubernetes/k3s-cluster/defaults/main.yml
+++ b/templates/provisioning/roles/kubernetes/k3s-cluster/defaults/main.yml
@@ -3,3 +3,5 @@ k3s_version: "v1.24.1+k3s1"
 k3s_token_file: /etc/rancher/node/password
 k3s_service_file: /usr/local/lib/systemd/system/k3s.service
 k3s_enable_selinux: true
+k3s_kubevip_version: v0.5.0
+k3s_kubevip_address: 192.168.1.11
