--- a/vars.template/global.yml
+++ b/vars.template/global.yml
@@ -1,32 +1,20 @@
 ---
-timezone: America/Vancouver
-
-dns:
-  hostNums: [ 20, 21 ]
-  secretKey: "PFe9O/533Vp/RBLRRZeHACoQf0h4MWtY5ZVmniCilsM="
-  secretType: hmac-sha256
-
-net:
-  prefix: 192.168.1.0/24
-  gateway: 192.168.1.254
-  domain: homelab.internal
-
-guest:
-  ctImage: "local:vztmpl/debian-11-standard_11.0-1_amd64.tar.gz"
-  pubKeyFile: "~/.ssh/id_ed25519.pub"
-  vmTemplate: template-rocky8
-
-proxmox:
-  hostNums: [ 100 ]
-
-postgres:
-  adminPassword: "somegoodpassword"
+timezone: UTC
 
 dirsrv:
   suffix: dc=homelab,dc=internal
-  root_user_passwd: password
+  root_user_passwd: "p4$Sw0Rd"
   default_user:
-    uid: default_user
-    displayName: Default User
-    email: default_user@domain.tld
-    passwd: password
+    uid: myusername
+    displayName: My Display Name
+    email: myemail@domain.tld
+    passwd: "p4$Sw0Rd"
+
+# 32 char string
+k3s_token: 'Tx0HcpfyMZb8oVJ6NNTwLcSjba5jMQHR'
+
+pushover:
+  enabled: true
+  user_token: ""
+  app_tokens:
+    k8s_host_upgrades: ""
