Fix: ansible-lint errors

--- a/10-nameservers.yml
+++ b/10-nameservers.yml
@@ -15,7 +15,7 @@
 - name: Provision BIND9 Name Servers
   hosts: new_nameservers
   remote_user: root
-  gather_facts: no
+  gather_facts: false
   vars_files:
     - vars/global.yml
   roles:
