--- a/roles/common/swap-file/tasks/main.yml
+++ b/roles/common/swap-file/tasks/main.yml
@@ -1,11 +1,11 @@
 ---
 - name: Check for existing swap file
-  stat:
+  ansible.builtin.stat:
     path: /.swapfile
   register: swapfile
 
 - name: Ensure swap file exists
-  file:
+  ansible.builtin.file:
     path: /.swapfile
     owner: root
     group: root
@@ -17,18 +17,18 @@
   when: not swapfile.stat.exists
 
 - name: Zero-fill the swap file
-  command: "dd if=/dev/zero of=/.swapfile bs=1M count={{ size }}"
+  ansible.builtin.command: "dd if=/dev/zero of=/.swapfile bs=1M count={{ size }}"
   when: not swapfile.stat.exists
 
 - name: Format the swap file
-  command: mkswap /.swapfile
+  ansible.builtin.command: mkswap /.swapfile
   when: not swapfile.stat.exists
 
 - name: Activate the swap file
-  command: swapon /.swapfile
+  ansible.builtin.command: swapon /.swapfile
   when: not swapfile.stat.exists
 
 - name: Create the fstab entry
-  lineinfile:
+  ansible.builtin.lineinfile:
     path: /etc/fstab
     line: /.swapfile    swap    swap    defaults    0 0
