--- a/roles/common/upgrade-system/tasks/Archlinux.yml
+++ b/roles/common/upgrade-system/tasks/Archlinux.yml
@@ -1,6 +1,6 @@
 ---
 - name: Upgrade the system
-  pacman:
-    update_cache: yes
-    upgrade: yes
-    force: yes
+  community.general.pacman:
+    update_cache: true
+    upgrade: true
+    force: true
