--- a/roles/common/wait-for-connection/tasks/main.yml
+++ b/roles/common/wait-for-connection/tasks/main.yml
@@ -1,6 +1,6 @@
 ---
 - name: Wait for target to become reachable
-  wait_for_connection:
+  ansible.builtin.wait_for_connection:
 
 - name: Gather facts for the first time
-  setup:
+  ansible.builtin.setup:
