--- a/roles/dirsrv_bootstrap/tasks/groups/administrators.yml
+++ b/roles/dirsrv_bootstrap/tasks/groups/administrators.yml
@@ -4,7 +4,7 @@
     bind_dn: cn=Directory Manager
     bind_pw: password
     server_uri: ldaps://ldap.homelab.internal
-    validate_certs: no
+    validate_certs: false
     dn: "cn=administrators,ou=groups,{{ dirsrv_domain }}"
     objectClass:
       - top
@@ -19,7 +19,7 @@
     bind_dn: cn=Directory Manager
     bind_pw: password
     server_uri: ldaps://ldap.homelab.internal
-    validate_certs: no
+    validate_certs: false
     dn: "cn=administrators,ou=groups,{{ dirsrv_domain }}"
     attributes:
       member: "uid={{ default_user_uid }},ou=people,{{ dirsrv_domain }}"
