--- a/roles/dirsrv_bootstrap/tasks/permissions/user_read.yml
+++ b/roles/dirsrv_bootstrap/tasks/permissions/user_read.yml
@@ -4,7 +4,7 @@
     bind_dn: cn=Directory Manager
     bind_pw: password
     server_uri: ldaps://ldap.homelab.internal
-    validate_certs: no
+    validate_certs: false
     dn: "cn=user_read,ou=permissions,{{ dirsrv_domain }}"
     objectClass:
       - top
