--- a/roles/proxmox/host-upgrade/handlers/main.yml
+++ b/roles/proxmox/host-upgrade/handlers/main.yml
@@ -1,6 +1,6 @@
 ---
 - name: Restart PVE web server
-  service:
+  ansible.builtin.systemd:
     name: pveproxy
     state: restarted
   listen: "restart pveproxy"
