Fix: Missing variables

--- a/vars.template/gitlab.yml
+++ b/vars.template/gitlab.yml
@@ -3,3 +3,4 @@ gitlab:
   edition: ce
   dirsrv_account_passwd: password
   runner_registration_token: 4B8FX5xb7MShDycF7jcZ
+  runner_default_docker_image: "alpine:latest"
