Fix: Packer parameters and naming improvements

--- a/templates/provisioning/roles/kubernetes/k3s-cluster/handlers/main.yml
+++ b/templates/provisioning/roles/kubernetes/k3s-cluster/handlers/main.yml
@@ -2,4 +2,4 @@
 - name: Include 'config-changed' handler tasks
   include_tasks: config-changed.yml
   listen: config_changed
-  when: packer_build_name == 'k3s-master'
+  when: packer_build_name == 'k3s-controller'
