Fix: LDAP bootstrap for testing
- Added back missing ca-trust role
- Added back missing bootstrap-database task
- Added back net.domain variable for Ansible

--- a/roles/dirsrv_bootstrap/tasks/main.yml
+++ b/roles/dirsrv_bootstrap/tasks/main.yml
@@ -1,8 +1,8 @@
 ---
 # TODO: Fix the database bootstrap
-# - name: Install the Directory Server
-#   include_tasks: bootstrap-database.yml
-#   # when: not dirsrv_instance.stat.exists
+- name: Install the Directory Server
+  include_tasks: bootstrap-database.yml
+  # when: not dirsrv_instance.stat.exists
 
 - name: Include tasks
   include_tasks: "{{ item }}"
