--- a/templates/provisioning/roles/kubernetes/k3s-cluster/tasks/services.yml
+++ b/templates/provisioning/roles/kubernetes/k3s-cluster/tasks/services.yml
@@ -25,7 +25,7 @@
     selevel: s0
   notify: config_changed
 
-- name: Enable and start K3s service
+- name: Enable the K3s service
   systemd:
     name: k3s.service
     daemon_reload: yes
