--- a/templates/provisioning/roles/kubernetes/k3s-cluster/tasks/token.yml
+++ b/templates/provisioning/roles/kubernetes/k3s-cluster/tasks/token.yml
@@ -1,7 +1,7 @@
 ---
 - name: Create token file
   copy:
-    content: "{{ k3s_token }}"
+    content: "{{ k3s.controller.node_token }}"
     dest: "{{ k3s_token_file }}"
     owner: root
     group: root
