--- a/templates/files/ks.cfg
+++ b/templates/files/ks.cfg
@@ -5,7 +5,7 @@ auth --enableshadow --passalgo=sha512
 reboot
 firewall --enabled --service=ssh
 firstboot --disable
-ignoredisk --only-use=vda
+ignoredisk --only-use=sda
 keyboard us
 # System language
 lang en_US.UTF-8
@@ -18,11 +18,11 @@ selinux --enforcing
 services --disabled="kdump" --enabled="NetworkManager,sshd,rsyslog,chronyd,cloud-init,cloud-init-local,cloud-config,cloud-final,rngd"
 timezone UTC --isUtc
 # Disk
-bootloader --append="console=ttyS0,115200n8 no_timer_check crashkernel=auto net.ifnames=0" --location=mbr --timeout=1 --boot-drive=vda
+bootloader --append="console=ttyS0,115200n8 no_timer_check crashkernel=auto net.ifnames=0" --location=mbr --timeout=1 --boot-drive=sda
 zerombr
 clearpart --all --initlabel
 reqpart
-part / --fstype="xfs" --ondisk=vda --size=8000
+part / --fstype="xfs" --ondisk=sda --size=8000
 
 %post --erroronfail
 #passwd -d root
