--- a/post-deploy/trust-internal-ca.yml
+++ b/post-deploy/trust-internal-ca.yml
@@ -2,6 +2,6 @@
 - name: Trust Internal CA
   hosts: localhost
   vars_files:
-    - ../vars/global.yml
+    - ../vars/secret.yml
   roles:
     - ca_trust
