--- a/vars.template/secret.yml
+++ b/vars.template/secret.yml
@@ -1,12 +1,21 @@
 ---
-timezone: UTC
+# Proxmox Authentication
+proxmox:
+  host: "pve1.homelab.internal"
+  apiTokenID: "automation@pve!default"
+  apiTokenSecret: "00000000-0000-0000-0000-000000000000"
+  tlsInsecure: false
 
-net:
-  domain: homelab.internal
+globalVars:
+  net:
+    dnsServers: [ "1.1.1.1", "1.0.0.1" ]
+    domainRoot: homelab.internal
+  ssh:
+    pubKeyFile: ~/.ssh/id_ed25519.pub
+  timezone: America/Vancouver
 
 dirsrv:
   suffix: dc=homelab,dc=internal
-  root_user_passwd: "p4$Sw0Rd"
   default_user:
     uid: myusername
     displayName: My Display Name
@@ -21,6 +30,7 @@ k3s:
     node_token: 'Tx0HcpfyMZb8oVJ6NNTwLcSjba5jMQHR'
 
 pushover:
+  # TODO: Implement enabled/disabled toggle
   enabled: true
   user_token: ""
   app_tokens:
