--- a/post-deploy/dirsrv-bootstrap.yml
+++ b/post-deploy/dirsrv-bootstrap.yml
@@ -4,6 +4,6 @@
   connection: local
   gather_facts: false
   vars_files:
-    - ../vars/global.yml
+    - ../vars/secret.yml
   roles:
     - dirsrv_bootstrap
