--- a/templates/provisioning/k3s-cluster.yml
+++ b/templates/provisioning/k3s-cluster.yml
@@ -3,7 +3,7 @@
   hosts: k3s_cluster
   become: true
   vars_files:
-    - ../../vars/global.yml
+    - ../../vars/secret.yml
   roles:
     - role: rhel8/timesync-ntp
     - role: rhel8/automatic-upgrades
