Fix: Proxmox create_account role
- Fix failed tasks
- Make role idempotent

--- a/proxmox/roles/create_account/handlers/main.yml
+++ b/proxmox/roles/create_account/handlers/main.yml
@@ -1,4 +1,9 @@
 ---
-- name: Set filesystem access and role for 'automation' account
+- name: Set access for 'automation' account
   ansible.builtin.command: pveum aclmod / -user automation@pve -role Automation
   listen: set_account_access_and_role
+
+- name: Print new API token to STDOUT
+  ansible.builtin.debug:
+    msg: "{{ pve_account_token.stdout }}"
+  listen: print_new_api_token
