--- a/proxmox/roles/create_account/tasks/main.yml
+++ b/proxmox/roles/create_account/tasks/main.yml
@@ -1,20 +1,24 @@
 ---
 - name: Create 'Automation' role
-  ansible.builtin.command: pveum role add Automation -privs "{{ role_privs | join(' ') }}"
+  ansible.builtin.command: |
+    pveum role add Automation -privs "{{ role_privs | join(' ') }}"
   register: pve_create_role
   changed_when: pve_create_role.rc == 0
+  failed_when: pve_create_role.rc == 2
   notify: set_account_access_and_role
 
 - name: Create 'automation' service account
   ansible.builtin.command: pveum user add automation@pve
   register: pve_create_account
-  changed_when: pve_create_role.rc == 0
+  changed_when: pve_create_account.rc == 0
+  failed_when: pve_create_account.rc == 255
   notify: set_account_access_and_role
 
-- name: Create automation account 'default' API token and return the secret
+- name: Create 'automation' account 'default' API token
   ansible.builtin.command: |
     pveum user token add
     automation@pve default --privsep 0
-    | grep value | awk '{ print $4 }'
   register: pve_account_token
   changed_when: pve_account_token.rc == 0
+  failed_when: pve_account_token.rc == 2
+  notify: print_new_api_token
